--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="left-column">
-                    <img id="profile_pic" src="images/charan.png">
+                    <img id="profile_pic" src="images/charan.jpg">
                     <h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
                     <div id="theme-options-wrapper">
