--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div id="corner-t1" class="corner"></div>
                             <div id="corner-tr" class="corner"></div>
                             <h3>What I Do</h3>
-                            <p>I was a post grduate in past life, now I enjoy teaching coding to kids.</p>
+                            <p>I am a post graduate and, working as a Software Engineer in a Multi national Company.</p>
                             <div id="corner-br" class="corner"></div>
                             <div id="corner-bl" class="corner"></div>
                         </div>
@@ -73,8 +73,8 @@
             <div class="about-wrapper">
                 <div class="about-me">
                     <h4>More about me</h4>
-                    <p>I build new projects to tickle my brain and love teaching others how they're made.</p>
-                    <p>While I keep busy teaching courses, I also like to learn new technologies.</p>
+                    <p>I build new projects to tickle my brain and love explaining to others how they're made.</p>
+                    <p>While I keep busy in my professional life, I also like to learn new technologies.</p>
 
                 <hr>
                 <h4>TOP EXPERTISE</h4>
@@ -102,11 +102,11 @@
 
                 <div class="social-links">
                       <img id="social_img" src="images/learnn_python.jpg">
-                    <h3>Follow me on Instagram</h3>
+                    <h3>Conect with me in linkedin</h3>
 
                     <a target="_blank" href="https://www.instagram.com/learnn_python/"> Instagram:@learnn_python | @charanteja_royal</a>
                     <br>
-                    <a target="_blank" href="https://www.linkedin.com/in/akula-charan-teja-3564211a3/">Linkedin: @akulacharanteja</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/akula-charanteja/">Linkedin: @akulacharanteja</a>
                 </div>
             </div>
         </div>
