--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div id="corner-t1" class="corner"></div>
                             <div id="corner-tr" class="corner"></div>
                             <h3>What I Do</h3>
-                            <p>I am a post graduate and, working as a Software Engineer in a Multi national Company.</p>
+                            <p>I am a post graduate and, working as a Software Engineer in a Multinational Corporation.</p>
                             <div id="corner-br" class="corner"></div>
                             <div id="corner-bl" class="corner"></div>
                         </div>
@@ -79,7 +79,7 @@
                 <hr>
                 <h4>TOP EXPERTISE</h4>
 
-                <p>Fullstack developer with primary focus on Django + (HTML,CSS,JS): <a target="_blank" href="Akula Charanteja resume.pdf">Download Resume</a> </p>
+                <p> Working as a QA Test Engineer in both Automation and manual part, also having knowledge of Fullstack development with primary focus on Django + (HTML,CSS,JS): <a target="_blank" href="Akula Charanteja resume.pdf">Download Resume</a> </p>
 
                     <div id="skills">
                         <ul>
