--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <img id="social_img" src="images/learnn_python.jpg">
                     <h3>Conect with me in linkedin</h3>
 
-                    <a target="_blank" href="https://www.instagram.com/learnn_python/"> Instagram:@learnn_python | @charanteja_royal</a>
+                    <a target="_blank" href="https://www.instagram.com/charanteja_royal/"> Instagram:@learnn_python | @charanteja_royal</a>
                     <br>
                     <a target="_blank" href="https://www.linkedin.com/in/akula-charanteja/">Linkedin: @akulacharanteja</a>
                 </div>
